--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
 name: Release
 
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - 'v*' # 当推送带有 'v' 前缀的 tag 时触发 workflow
 
 jobs:
   build:
@@ -24,12 +26,16 @@ jobs:
         with:
           go-version: '1.22.5'
 
+      - name: Get version from tag
+        run: |
+          echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+
       - name: Build
         run: |
           cd ./golang
           go mod init main
           go mod tidy
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o homeai_${{ matrix.goos }}_${{ matrix.goarch }}
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o homeai_${{ matrix.goos }}_${{ matrix.goarch }}_${{ env.VERSION }}
 
       - name: Create Release
         id: create_release
@@ -38,8 +44,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
-          tag_name: v${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
           draft: true
           prerelease: false
 
@@ -49,6 +55,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./golang/homeai_${{ matrix.goos }}_${{ matrix.goarch }}
-          asset_name: homeai_${{ matrix.goos }}_${{ matrix.goarch }}
+          asset_path: ./golang/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_${{ env.VERSION }}
+          asset_name: homeai_${{ matrix.goos }}_${{ matrix.goarch }}_${{ env.VERSION }}
           asset_content_type: application/octet-stream
