--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # 使用 ubuntu-latest 作为构建平台
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         goos: [linux, darwin, windows]
@@ -37,7 +37,7 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        if: matrix.goos == 'linux' && matrix.goarch == 'amd64' # 使用 linux-amd64 构建发布
+        if: matrix.goos == 'linux' && matrix.goarch == 'amd64'
         env:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
@@ -48,6 +48,7 @@ jobs:
 
       - name: Upload Binaries
         uses: actions/upload-release-asset@v1
+        if: matrix.goos == 'linux' && matrix.goarch == 'amd64' # 只上传 linux-amd64 的构建产物
         env:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
