--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,29 +30,39 @@ jobs:
 
       - name: Build
         run: |
-          mkdir dist
           go mod tidy
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o dist/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.goos }}_${{ matrix.goarch }}
+          path: ./homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        if: matrix.goos == 'linux' && matrix.goarch == 'amd64'
         env:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release v${{ env.VERSION }}
-          draft: true
+          draft: false
           prerelease: false
 
       - name: Upload Binaries
         uses: actions/upload-release-asset@v1
-        if: matrix.goos == 'linux' && matrix.goarch == 'amd64' # 只上传 linux-amd64 的构建产物
         env:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
+          asset_path: ./${{ matrix.goos }}_${{ matrix.goarch }}/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
           asset_name: homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
           asset_content_type: application/octet-stream
