--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release v${{ env.VERSION }}
-          draft: true
+          draft: false
           prerelease: false
 
       - name: Upload Binaries
