--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goos: [ linux, darwin, windows ]
-        goarch: [ "amd64", "386", "arm64" ]
+        goos: [linux, darwin, windows]
+        goarch: ["amd64", "386", "arm64"]
         exclude:
           - goos: darwin
             goarch: 386
@@ -54,6 +54,8 @@ jobs:
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v3
+        with:
+          path: ./artifacts
 
       - name: Create Release
         id: create_release
@@ -72,6 +74,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ matrix.goos }}_${{ matrix.goarch }}/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
+          asset_path: ./artifacts/${{ matrix.goos }}_${{ matrix.goarch }}/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
           asset_name: homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
           asset_content_type: application/octet-stream
