--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,11 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4 # Updated to v4
         with:
-          name: release
+          name: release-${{ runner.run_id }} # 使用运行 ID 来确保唯一性
           path: ./release
+          if-no-files-found: warn
+          compression-level: 6
+          overwrite: false
 
   release:
     needs: build
