--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*' # 当推送带有 'v' 前缀的 tag 时触发 workflow
+      - 'v*'
 
 jobs:
   build:
@@ -18,13 +18,13 @@ jobs:
           - goos: windows
             goarch: 386
     steps:
-      - uses: actions/checkout@v4 # Updated to v4
+      - uses: actions/checkout@v4
       - name: Set up Go
-        uses: actions/setup-go@v4 # Updated to v4
+        uses: actions/setup-go@v4
         with:
           go-version: '1.22'
       - name: Get version from tag
-        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF/refs/tags/v/}" >> $GITHUB_ENV
       - name: Build
         run: |
           go mod tidy
@@ -34,9 +34,9 @@ jobs:
           mkdir -p release
           zip -r release/homeai_v${{ env.VERSION }}.zip homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
       - name: Upload artifact
-        uses: actions/upload-artifact@v4 # Updated to v4
+        uses: actions/upload-artifact@v4
         with:
-          name: release-${{ runner.run_id }} # 使用运行 ID 来确保唯一性
+          name: release-${{ runner.run_id }}
           path: ./release
           if-no-files-found: warn
           compression-level: 6
@@ -47,12 +47,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download release archive
-        uses: actions/download-artifact@v4 # Updated to v4
+        uses: actions/download-artifact@v4
         with:
-          name: release
+          name: release-${{ runner.run_id }} # 使用相同的运行 ID 下载产物
           path: ./release
       - name: Get version from tag
-        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF/refs/tags/v/}" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
