--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           go-version: '1.22'
       - name: Get version from tag
-        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
+        run: echo "VERSION=${{ github.ref#refs/tags/ }}" >> $GITHUB_ENV
       - name: Build
         run: |
           mkdir -p release
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: release-latest
-          path: ./release
+          path: ./release/*
 
   release:
     needs: build
@@ -46,7 +46,7 @@ jobs:
           name: release-latest
           path: ./release
       - name: Get version from tag
-        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
+        run: echo "VERSION=${{ github.ref#refs/tags/ }}" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -57,11 +57,11 @@ jobs:
           release_name: Release v${{ env.VERSION }}
           draft: false
           prerelease: false
-      - name: Upload Release Archive
-        run: |
-          for file in ./release/*; do
-            echo "Uploading $file..."
-            gh release upload ${{ github.ref }} "$file" --clobber
-          done
+      - name: Upload Release Assets
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./release/*
+          asset_name: homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
