--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           go-version: '1.22'
       - name: Get version from tag
-        run: echo "VERSION=${{ github.ref#refs/tags/ }}" >> $GITHUB_ENV
+        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
       - name: Build
         run: |
           mkdir -p release
@@ -46,12 +46,12 @@ jobs:
           name: release-latest
           path: ./release
       - name: Get version from tag
-        run: echo "VERSION=${{ github.ref#refs/tags/ }}" >> $GITHUB_ENV
+        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release v${{ env.VERSION }}
@@ -60,7 +60,7 @@ jobs:
       - name: Upload Release Assets
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./release/*
