--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,67 +1,115 @@
 name: Release
 
 on:
+  release:
+    types: [prereleased]
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
+    paths:
+      - "**/*.go"
+      - "go.mod"
+      - "go.sum"
+      - ".github/workflows/*.yml"
+
+permissions: write-all
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        goos: [linux, darwin, windows]
-        goarch: ["amd64", "386", "arm64"]
+        # Include amd64 on all platforms.
+        goos: [windows, linux, darwin]
+        goarch: [amd64, 386]
         exclude:
-          - goos: darwin
-            goarch: 386
+          # Exclude i386 on darwin.
+          - goarch: 386
+            goos: darwin
+        include:
+          # BEGIN Linux ARM 5 6 7
+          - goos: linux
+            goarch: arm
+            goarm: 7
+          - goos: linux
+            goarch: arm
+            goarm: 6
+          - goos: linux
+            goarch: arm
+            goarm: 5
+          # END Linux ARM 5 6 7
+          # BEGIN Windows ARM 7
           - goos: windows
-            goarch: 386
+            goarch: arm
+            goarm: 7
+          # END Windows ARM 7
+          # BEGIN Other architectures
+          - goos: darwin
+            goarch: arm64
+          - goos: linux
+            goarch: arm64
+          - goos: linux
+            goarch: riscv64
+          - goos: windows
+            goarch: arm64
+          - goos: android
+            goarch: arm64
+          # BEGIN MIPS
+          - goos: linux
+            goarch: mips64
+          - goos: linux
+            goarch: mips64le
+          - goos: linux
+            goarch: mipsle
+          - goos: linux
+            goarch: mips
+          # END MIPS
+          # END Other architectures
+      fail-fast: false
+
+    runs-on: ubuntu-latest
+    env:
+      GOOS: ${{ matrix.goos }}
+      GOARCH: ${{ matrix.goarch }}
+      GOARM: ${{ matrix.goarm }}
+      CGO_ENABLED: 0
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout codebase
+        uses: actions/checkout@v3
+
+      - name: Show workflow information
+        id: get_filename
+        run: |
+          export _NAME=$GOOS-$GOARCH$GOARM
+          echo "GOOS: $GOOS, GOARCH: $GOARCH, GOARM: $GOARM, RELEASE_NAME: $_NAME"
+          echo "::set-output name=ASSET_NAME::$_NAME"
+          echo "ASSET_NAME=$_NAME" >> $GITHUB_ENV
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.22'
-      - name: Get version from tag
-        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
+          go-version: ^1.19
+
+      - name: Get project dependencies
+        run: go mod download
+
       - name: Build
         run: |
-          mkdir -p release
-          go mod tidy
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o release/homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
-      - name: Upload release archive
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-latest
-          path: ./release/*
+          mkdir -p build_assets
+          go build -v -o build_assets/EasierConnect -trimpath -ldflags "-s -w -buildid=" .
+      - name: Rename Windows EasierConnect
+        if: matrix.goos == 'windows'
+        run: |
+          cd ./build_assets || exit 1
+          mv EasierConnect EasierConnect.exe
+      - name: Create ZIP archive
+        run: |
+          pushd build_assets || exit 1
+          zip -9vr ../EasierConnect-$ASSET_NAME.zip .
+          popd || exit 1
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download release archive
-        uses: actions/download-artifact@v4
-        with:
-          name: release-latest
-          path: ./release
-      - name: Get version from tag
-        run: echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | cut -d'v' -f2)" >> $GITHUB_ENV
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Upload release binary
+        if: github.event_name == 'release'
         env:
-          GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release v${{ env.VERSION }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.HOMEAI_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/*
-          asset_name: homeai_${{ matrix.goos }}_${{ matrix.goarch }}_v${{ env.VERSION }}
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          gh release upload ${{ github.event.release.tag_name }} EasierConnect-${{ steps.get_filename.outputs.ASSET_NAME }}.zip
