--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         # Include amd64 on all platforms.
         goos: [windows, linux, darwin]
-        goarch: [amd64, 386]
+        goarch: [ "amd64", "386" ]
         exclude:
           # Exclude i386 on darwin.
           - goarch: 386
