--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,15 +18,12 @@ jobs:
   build:
     strategy:
       matrix:
-        # Include amd64 on all platforms.
         goos: [windows, linux, darwin]
         goarch: [ "amd64", "386" ]
         exclude:
-          # Exclude i386 on darwin.
           - goarch: 386
             goos: darwin
         include:
-          # BEGIN Linux ARM 5 6 7
           - goos: linux
             goarch: arm
             goarm: 7
@@ -36,13 +33,9 @@ jobs:
           - goos: linux
             goarch: arm
             goarm: 5
-          # END Linux ARM 5 6 7
-          # BEGIN Windows ARM 7
           - goos: windows
             goarch: arm
             goarm: 7
-          # END Windows ARM 7
-          # BEGIN Other architectures
           - goos: darwin
             goarch: arm64
           - goos: linux
@@ -53,7 +46,6 @@ jobs:
             goarch: arm64
           - goos: android
             goarch: arm64
-          # BEGIN MIPS
           - goos: linux
             goarch: mips64
           - goos: linux
@@ -62,8 +54,6 @@ jobs:
             goarch: mipsle
           - goos: linux
             goarch: mips
-          # END MIPS
-          # END Other architectures
       fail-fast: false
 
     runs-on: ubuntu-latest
@@ -77,13 +67,6 @@ jobs:
       - name: Checkout codebase
         uses: actions/checkout@v3
 
-      - name: Show workflow information
-        id: get_filename
-        run: |
-          export _NAME=$GOOS-$GOARCH$GOARM
-          echo "GOOS: $GOOS, GOARCH: $GOARCH, GOARM: $GOARM, RELEASE_NAME: $_NAME"
-          echo "::set-output name=ASSET_NAME::$_NAME"
-          echo "ASSET_NAME=$_NAME" >> $GITHUB_ENV
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
@@ -96,15 +79,17 @@ jobs:
         run: |
           mkdir -p build_assets
           go build -v -o build_assets/EasierConnect -trimpath -ldflags "-s -w -buildid=" .
+
       - name: Rename Windows EasierConnect
         if: matrix.goos == 'windows'
         run: |
           cd ./build_assets || exit 1
           mv EasierConnect EasierConnect.exe
+
       - name: Create ZIP archive
         run: |
           pushd build_assets || exit 1
-          zip -9vr ../EasierConnect-$ASSET_NAME.zip .
+          zip -9vr ../EasierConnect-$GOOS-$GOARCH$GOARM.zip .
           popd || exit 1
 
       - name: Upload release binary
@@ -112,4 +97,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release upload ${{ github.event.release.tag_name }} EasierConnect-${{ steps.get_filename.outputs.ASSET_NAME }}.zip
+          gh release upload ${{ github.event.release.tag_name }} EasierConnect-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goarm }}.zip
